k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:                     # this selector is used to match the pods managed by this deployment
    matchLabels:
      app: backend-deployment   # this one should match the label in the pod template
  template:                     # this is the pod template
    metadata:
      name: backend-pod
      namespace: chat-app
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: chatapp-backend
          image: rohankhanal14/chatapp-backend:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
