k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:                     # this selector is used to match the pods managed by this deployment
    matchLabels:
      app: frontend-deployment   # this one should match the label in the pod template
  template:                     # this is the pod template
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: chatapp-frontend
          image: rohankhanal14/chatapp-frontend:latest
          ports:
            - containerPort: 80 # this is the port that the container will listen on
