k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: backend # this should match the label in the backend deployment
  type: ClusterIP  # or LoadBalancer, NodePort, etc. depending on your requirements
  # If you want to expose the service outside the cluster, you can use LoadBalancer
  # or NodePort type.
  ports:
  - port: 5001  # this is the port that the service will expose
    targetPort: 5001  # this is the port that the backend container listens on
