k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  selector:
    app: frontend # this should match the label in the frontend deployment
  ports:
  - port: 80  # this is the port that the service will expose
    targetPort: 80  # this is the port that the frontend container listens on
